--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cglauncher",
+  "name": "test",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,12 +10,15 @@
     "tauri": "tauri"
   },
   "dependencies": {
-    "@tauri-apps/api": "^1",
+    "@tauri-apps/api": ">=2.0.0-beta.0",
     "@tauri-apps/plugin-dialog": "^2.0.0-beta.3",
-    "vue": "^3.3.4"
+    "@tauri-apps/plugin-fs": "^2.0.0-beta.3",
+    "@tauri-apps/plugin-shell": ">=2.0.0-beta.0",
+    "vue": "^3.3.4",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
-    "@tauri-apps/cli": "^1",
+    "@tauri-apps/cli": ">=2.0.0-beta.0",
     "@vitejs/plugin-vue": "^5.0.4",
     "vite": "^5.0.0"
   }
