--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
-name = "test"
-version = "0.0.0"
-description = "A Tauri App"
-authors = ["you"]
+name = "CGLauncher"
+version = "0.1.0"
+description = "CG Launcher"
+authors = ["Kaan Saçma"]
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -17,4 +17,5 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 tauri-plugin-dialog = "2.0.0-beta.7"
 tauri-plugin-fs = "2.0.0-beta.7"
+execute = "0.2.13"
 
